--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="##Certification"><strike>Certification</strike></a></li>
           <li><a class="nav-link" href="##portfolio"><strike>Projects</strike></a></li>
-          <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a class="nav-link" href="#contact">Hire Me!</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -84,8 +84,9 @@
       <p style="font-size: 10px; margin-bottom: 10px;">We apologize for the inconvenience. This website is currently under construction.</p>
       <p style="font-size: 15px; margin-bottom: 15px;">Expected Completion: <span id="countdown"></span></p>
       <p style="font-size: 10px; margin-bottom: 15px;">Contact: <a href="mailto:info@example.com">sha.since1999@gmail.com</a></p>
-      <form action="subscribe.php" method="POST" style="display: flex; justify-content: center; align-items: center; margin-top: 10px;">
+      <form action="https://formspree.io/f/mjvqvwoo"  method="POST" style="display: flex; justify-content: center; align-items: center; margin-top: 10px;">
         <input type="email" name="email" placeholder="Enter your email" required style="width: 150px; padding: 5px; border: 1px; border-radius: 5px; background-color: #2d963000; color: #00000000; font-size: 5px;">
+        <input type="hidden" name="message" value="Subscribed">
         <button type="submit" style="padding: 5px 10px; background-color: #00000000; color: #fff; border: 1px solid rgb(3, 83, 27); border-radius: 5px; font-size: 5px; cursor: pointer;">Subscribe</button>
       </form>
     </div>
@@ -768,19 +769,19 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Contact</h2>
-        <p>Contact Me</p>
+        <h2>Let's Contact</h2>
+        <p>Hire Me!</p>
       </div>
 
       <div class="row mt-2">
 
-        <!-- <div class="col-md-6 d-flex align-items-stretch">
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Sector 62, Noida, UP, India</p>
+            <p>Uttar Pradesh, India</p>
           </div>
-        </div> -->
+        </div>
 
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
@@ -814,7 +815,7 @@
         </div>
       </div>
 
-      <form onsubmit="return postToGoogle(event);" method="post" role="form" class="php-email-form mt-4">
+      <form  action="https://formspree.io/f/mjvqvwoo" method="POST" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -826,6 +827,7 @@
         <div class="form-group mt-3">
           <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
         </div>
+      
         <div class="form-group mt-3">
           <textarea class="form-control" name="message" rows="5" placeholder="Message" id="message" required></textarea>
         </div>
