--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
         </div>
       
         <div class="form-group mt-3">
-          <textarea class="form-control" name="message" rows="5" placeholder="Message" id="message" required></textarea>
+          <textarea class="form-control" name="message" rows="5" placeholder="Message|Job description" id="message" required></textarea>
         </div>
         <div class="my-3">
           <div class="loading">Loading</div>
