--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   <div class="container ">
   <div style="display:flex; justify-content: center; align-items: center; height: 0vh;">
     <div style="text-align: center; max-width: 500px; padding: 10px; background-color: #ffffff00; border-radius: 5px;">
-      <h1 style="font-size: 15px; margin-bottom: 15px;">Under Construction</h1>
-      <p style="font-size: 10px; margin-bottom: 10px;">We apologize for the inconvenience. This website is currently under construction.</p>
+      <!-- <h1 style="font-size: 15px; margin-bottom: 15px;">Under Construction</h1>
+      <p style="font-size: 10px; margin-bottom: 10px;">We apologize for the inconvenience. This website is currently under construction.</p> -->
       <p style="font-size: 15px; margin-bottom: 15px;">Expected Completion: <span id="countdown"></span></p>
       <p style="font-size: 10px; margin-bottom: 15px;">Contact: <a href="mailto:info@example.com">sha.since1999@gmail.com</a></p>
       <form action="https://formspree.io/f/mjvqvwoo"  method="POST" style="display: flex; justify-content: center; align-items: center; margin-top: 10px;">
